[gd_scene load_steps=18 format=3 uid="uid://be2rg58qym27h"]

[ext_resource type="Texture2D" uid="uid://c47xpbj12x1kw" path="res://Art/Backgrounds/menu background/menu background .png" id="1_x5tmf"]
[ext_resource type="Script" path="res://Scripts/Start Scene/CloudScript.gd" id="2_etkdn"]
[ext_resource type="Texture2D" uid="uid://ca1bshnt3utr5" path="res://Art/Backgrounds/menu background/menu clouds.png" id="3_3sq1i"]
[ext_resource type="Texture2D" uid="uid://b1sjd5teia0q" path="res://Art/Tech/Ð¡hoosing character menu/cc menu.png" id="4_djynw"]
[ext_resource type="Texture2D" uid="uid://ds3nvmoip4oe8" path="res://Art/Tech/back_forward.png" id="5_146tl"]
[ext_resource type="Script" path="res://Scripts/Main menu/Settings menu/BackButtonScript.gd" id="6_m2t0e"]
[ext_resource type="Theme" uid="uid://b78i1nbh81d5p" path="res://Theme.tres" id="7_f256s"]
[ext_resource type="LabelSettings" uid="uid://cnurjasiglaqp" path="res://label_settings.tres" id="7_jrvry"]
[ext_resource type="Script" path="res://Scripts/Main menu/Settings menu/VideoSettings.gd" id="7_r4lep"]
[ext_resource type="PackedScene" uid="uid://1cr6veqtiy1q" path="res://Scenes/fps_counter.tscn" id="10_w8bkl"]

[sub_resource type="AtlasTexture" id="AtlasTexture_lwr4j"]
atlas = ExtResource("1_x5tmf")
region = Rect2(1920, 0, 480, 540)

[sub_resource type="AtlasTexture" id="AtlasTexture_h6ykm"]
atlas = ExtResource("1_x5tmf")
region = Rect2(1440, 0, 480, 540)

[sub_resource type="AtlasTexture" id="AtlasTexture_m2no0"]
atlas = ExtResource("3_3sq1i")
region = Rect2(0, 0, 960, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_s3n30"]
atlas = ExtResource("1_x5tmf")
region = Rect2(960, 0, 480, 540)

[sub_resource type="Animation" id="Animation_w5flg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Back:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_68d4i"]
resource_name = "pressed"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Back:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [1, 0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_x2nx5"]
_data = {
"RESET": SubResource("Animation_w5flg"),
"pressed": SubResource("Animation_68d4i")
}

[node name="Settings" type="Node2D"]

[node name="Camera and BG" type="Node2D" parent="."]

[node name="ParallaxBackground" type="ParallaxBackground" parent="Camera and BG"]

[node name="Sun" type="ParallaxLayer" parent="Camera and BG/ParallaxBackground"]
position = Vector2(240, 270)

[node name="Sun" type="Sprite2D" parent="Camera and BG/ParallaxBackground/Sun"]
position = Vector2(-240, -270)
texture = SubResource("AtlasTexture_lwr4j")
centered = false
region_enabled = true
region_rect = Rect2(0, 0, 480, 288)

[node name="BG Trees" type="ParallaxLayer" parent="Camera and BG/ParallaxBackground"]
position = Vector2(240, 270)

[node name="BG Trees" type="Sprite2D" parent="Camera and BG/ParallaxBackground/BG Trees"]
position = Vector2(-240, -259)
texture = SubResource("AtlasTexture_h6ykm")
centered = false
region_enabled = true
region_rect = Rect2(0, 0, 480, 309)

[node name="Clouds" type="ParallaxLayer" parent="Camera and BG/ParallaxBackground"]
visible = false
texture_filter = 1
texture_repeat = 2
position = Vector2(240, 270)
motion_mirroring = Vector2(980, 0)
script = ExtResource("2_etkdn")

[node name="Clouds" type="Sprite2D" parent="Camera and BG/ParallaxBackground/Clouds"]
texture_filter = 1
texture_repeat = 2
position = Vector2(213, -156)
texture = SubResource("AtlasTexture_m2no0")
region_enabled = true
region_rect = Rect2(0, 0, 1431, 270)

[node name="Mountains" type="ParallaxLayer" parent="Camera and BG/ParallaxBackground"]
position = Vector2(240, 270)

[node name="Mountains" type="Sprite2D" parent="Camera and BG/ParallaxBackground/Mountains"]
position = Vector2(-240, -254)
texture = SubResource("AtlasTexture_s3n30")
centered = false
region_enabled = true
region_rect = Rect2(0, 0, 480, 304)

[node name="Trees And Lake" type="ParallaxLayer" parent="Camera and BG/ParallaxBackground"]
position = Vector2(240, 270)

[node name="Earth" type="ParallaxLayer" parent="Camera and BG/ParallaxBackground"]
position = Vector2(240, 270)

[node name="Camera2D" type="Camera2D" parent="Camera and BG"]
position = Vector2(240, 160)
zoom = Vector2(0.5, 0.5)
drag_top_margin = 0.29

[node name="Settings menu" type="Sprite2D" parent="."]
position = Vector2(79.5, 67)
texture = ExtResource("4_djynw")
centered = false
region_enabled = true
region_rect = Rect2(0, 0, 337, 207)

[node name="BackButton" type="TextureButton" parent="."]
offset_left = 369.0
offset_top = 79.0
offset_right = 384.0
offset_bottom = 94.0

[node name="Back" type="Sprite2D" parent="BackButton"]
texture = ExtResource("5_146tl")
centered = false
hframes = 2
region_enabled = true
region_rect = Rect2(0, 0, 30, 16)
script = ExtResource("6_m2t0e")

[node name="BackButtonAnimation" type="AnimationPlayer" parent="BackButton/Back"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_x2nx5")
}

[node name="Timer" type="Timer" parent="BackButton/Back"]
wait_time = 0.2

[node name="Video" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("7_r4lep")

[node name="CheckBox1" type="CheckBox" parent="Video"]
layout_mode = 0
offset_left = 196.0
offset_top = 115.0
offset_right = 212.0
offset_bottom = 131.0
theme = ExtResource("7_f256s")
theme_override_constants/check_v_offset = 2
button_pressed = true

[node name="Label" type="Label" parent="Video"]
layout_mode = 0
offset_left = 110.0
offset_top = 94.0
offset_right = 135.0
offset_bottom = 102.0
scale = Vector2(2, 2)
text = "Video:"
label_settings = ExtResource("7_jrvry")

[node name="Resolution" type="OptionButton" parent="Video"]
layout_mode = 0
offset_left = 196.0
offset_top = 134.0
offset_right = 246.0
offset_bottom = 148.0
theme = ExtResource("7_f256s")
theme_override_colors/font_color = Color(0.0705882, 0.027451, 0.192157, 1)
alignment = 1
item_count = 4
selected = 0
fit_to_longest_item = false
popup/item_0/text = "1920x1080"
popup/item_0/id = 0
popup/item_1/text = "1600x900"
popup/item_1/id = 1
popup/item_2/text = "1280x720"
popup/item_2/id = 2
popup/item_3/text = "854x480"
popup/item_3/id = 3

[node name="CheckBox" type="CheckBox" parent="Video"]
layout_mode = 0
offset_left = 196.0
offset_top = 151.0
offset_right = 212.0
offset_bottom = 167.0
theme = ExtResource("7_f256s")
theme_override_constants/check_v_offset = 2
flat = true

[node name="CheckBox2" type="CheckBox" parent="Video"]
layout_mode = 0
offset_left = 196.0
offset_top = 170.0
offset_right = 212.0
offset_bottom = 186.0
theme = ExtResource("7_f256s")
theme_override_constants/check_v_offset = 2
flat = true

[node name="maxFPSSlider" type="HSlider" parent="Video"]
layout_mode = 0
offset_left = 196.0
offset_top = 185.0
offset_right = 271.0
offset_bottom = 201.0
theme = ExtResource("7_f256s")
min_value = 30.0
max_value = 120.0
value = 120.0

[node name="maxFPS" type="Label" parent="Video/maxFPSSlider"]
layout_mode = 0
offset_left = 77.0
offset_top = 3.0
offset_right = 90.0
offset_bottom = 11.0
text = "120"

[node name="brightnessSlider" type="HSlider" parent="Video"]
layout_mode = 0
offset_left = 196.0
offset_top = 205.0
offset_right = 271.0
offset_bottom = 221.0
theme = ExtResource("7_f256s")
max_value = 2.0
step = 0.01
value = 1.0

[node name="brightness" type="Label" parent="Video/brightnessSlider"]
layout_mode = 0
offset_left = 77.0
offset_top = 3.0
offset_right = 82.0
offset_bottom = 11.0
text = "0"

[node name="GridContainer" type="GridContainer" parent="Video"]
layout_mode = 0
offset_left = 114.0
offset_top = 115.0
offset_right = 165.0
offset_bottom = 183.0
scale = Vector2(1.5, 1.5)
theme_override_constants/h_separation = 62

[node name="Label" type="Label" parent="Video/GridContainer"]
layout_mode = 2
text = "Fullscreen"
label_settings = ExtResource("7_jrvry")

[node name="Label2" type="Label" parent="Video/GridContainer"]
layout_mode = 2
text = "Resolution"
label_settings = ExtResource("7_jrvry")

[node name="Label3" type="Label" parent="Video/GridContainer"]
layout_mode = 2
text = "Display FPS"
label_settings = ExtResource("7_jrvry")

[node name="Label6" type="Label" parent="Video/GridContainer"]
layout_mode = 2
text = "V-sync"
label_settings = ExtResource("7_jrvry")

[node name="Label4" type="Label" parent="Video/GridContainer"]
layout_mode = 2
text = "Max FPS"
label_settings = ExtResource("7_jrvry")

[node name="Label5" type="Label" parent="Video/GridContainer"]
layout_mode = 2
text = "Brightness"
label_settings = ExtResource("7_jrvry")

[node name="Control" parent="." instance=ExtResource("10_w8bkl")]

[connection signal="ready" from="Camera and BG/ParallaxBackground/Clouds/Clouds" to="Camera and BG/ParallaxBackground/Clouds" method="_on_clouds_ready"]
[connection signal="pressed" from="BackButton" to="BackButton/Back" method="_on_back_button_pressed"]
[connection signal="timeout" from="BackButton/Back/Timer" to="BackButton/Back" method="_on_timer_timeout"]
[connection signal="pressed" from="Video/CheckBox1" to="Video" method="_on_check_box_1_pressed"]
[connection signal="item_selected" from="Video/Resolution" to="Video" method="_on_resolution_item_selected"]
[connection signal="pressed" from="Video/CheckBox" to="Video" method="_on_check_box_pressed"]
[connection signal="pressed" from="Video/CheckBox2" to="Video" method="_on_check_box_2_pressed"]
[connection signal="value_changed" from="Video/maxFPSSlider" to="Video" method="_on_max_fps_slider_value_changed"]
[connection signal="value_changed" from="Video/brightnessSlider" to="Video" method="_on_brightness_slider_value_changed"]
